# EdgeReplica

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
bench/: Cargo.toml
bench/benches/: page_hash.rs
bench/src/: lib.rs
bench/wasm-bench/: Cargo.toml  run.mjs
bench/wasm-bench/src/: lib.rs
client/: Cargo.toml
client/src/: auth_cmd.rs  config.rs  db_cmd.rs  main.rs  pages.rs  sync_cmd.rs  sync_ws.rs  transport.rs
integration-tests/: package.json  pnpm-lock.yaml  tsconfig.json
integration-tests/tests/: admin.test.ts  helpers.ts  mf.ts  smoke.test.ts  sync-frame.ts  sync-push-pull.test.ts  sync-session.ts  sync-ws.test.ts
proto/edgereplica/admin/v1/: admin.proto
proto/edgereplica/auth/v1/: token.proto
proto/edgereplica/sync/v1/: sync.proto
protocol/: Cargo.toml  README.md  build.rs
protocol/src/: lib.rs  sync.rs
shared/: Cargo.toml
shared/src/: clock.rs  error.rs  lib.rs
shared/src/auth/: mod.rs
shared/src/domain/: entities.rs  mod.rs
worker/: Cargo.toml  wrangler.toml
worker/migrations/: 0001_init.sql
worker/src/: clock.rs  clock_worker.rs  do_edge_replica.rs  do_migrations.rs  do_sync_ws.rs  lib.rs  repo.rs  repo_d1.rs  repo_mem.rs  routes.rs  state.rs  sync_forward.rs
worker/src/auth/: keyring.rs  mod.rs  password.rs  session.rs  tokens.rs
worker/src/domain/: enums.rs  ids.rs
worker/src/middleware/: do_sync_auth.rs  mod.rs  request_id.rs  session_auth.rs
worker/src/services/: admin.rs  common.rs  mod.rs  oauth.rs  sync.rs  sync_fsm.rs  sync_storage.rs
