[package]
name = "edgereplica-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
connectrpc = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }

# Referenced by generated trait bounds.
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
futures = { workspace = true }

# Generated JSON codec uses serde derives.
serde = { workspace = true }

# Sync wire format. `rmp-serde` is pure Rust and builds for wasm32; `blake3`
# (workspace pin: `default-features = false`, no rayon) is wasm-safe.
rmp-serde = "1"
blake3 = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
connectrpc-build = { workspace = true }
