[package]
name = "edgereplica-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Phase 3 fills these in. Listed here as a forward-looking sketch — none are
# referenced from src/ yet, so cargo won't pull them until the modules land.
