[package]
name = "edgereplica-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Macaroons + key encoding for session/sync tokens.
libmacaroon = { workspace = true }
base64 = { workspace = true }

# Argon2id password hashing.
argon2 = { workspace = true }
password-hash = { workspace = true }
rand_core = { workspace = true }

# UUIDs for typed ids.
uuid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Sync wire format. `rmp-serde` is pure Rust and builds for wasm32.
rmp-serde = "1"
bytes = { workspace = true }
blake3 = { workspace = true }

# `getrandom/js` for the wasm32 OS RNG path used by uuid + password salt.
getrandom = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
