[package]
name = "edgereplica-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# `rlib` keeps `cargo check --workspace` (host) honest; `cdylib` is what
# `worker-build` packages for the wasm32 target.
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
edgereplica-protocol = { path = "../protocol" }
edgereplica-shared = { path = "../shared" }

worker = { version = "0.8", features = ["http", "d1"] }
worker-macros = { version = "0.8", features = ["http"] }

connectrpc = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }

http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

futures = { workspace = true }
tower = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
